oldMeta/Ts/unpackaged/Telangana/objects/Complaint__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adhaar_Number__c</fullName>
        <label>Adhaar Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_ID__c</fullName>
        <displayFormat>CID-{00}</displayFormat>
        <label>Complaint ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Complaint_Reason__c</fullName>
        <label>Complaint Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_No__c</fullName>
        <label>Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.Nizamabad</fullName>
                </value>
                <value>
                    <fullName>2.Karimnagar</fullName>
                </value>
                <value>
                    <fullName>3.Medak</fullName>
                </value>
                <value>
                    <fullName>4.Adilabad</fullName>
                </value>
                <value>
                    <fullName>5.Rangareddy</fullName>
                </value>
                <value>
                    <fullName>6.Hyderabad</fullName>
                </value>
                <value>
                    <fullName>7.Mahabubnagar</fullName>
                </value>
                <value>
                    <fullName>8.Khammam</fullName>
                </value>
                <value>
                    <fullName>9.Warangal</fullName>
                </value>
                <value>
                    <fullName>10.Nalgonda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandal__c</fullName>
        <label>Mandal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>District__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Kamareddy</fullName>
                </value>
                <value>
                    <fullName>Bodhan</fullName>
                </value>
                <value>
                    <fullName>Makloor</fullName>
                </value>
                <value>
                    <fullName>Nizamabad</fullName>
                </value>
                <value>
                    <fullName>Nizamsagar</fullName>
                </value>
                <value>
                    <fullName>Karimnagar</fullName>
                </value>
                <value>
                    <fullName>Jagityal</fullName>
                </value>
                <value>
                    <fullName>Medak</fullName>
                </value>
                <value>
                    <fullName>Sangareddy</fullName>
                </value>
                <value>
                    <fullName>Patancherru</fullName>
                </value>
                <value>
                    <fullName>Siddipet</fullName>
                </value>
                <value>
                    <fullName>Adilabad</fullName>
                </value>
                <value>
                    <fullName>Bhainsa</fullName>
                </value>
                <value>
                    <fullName>Mancherial</fullName>
                </value>
                <value>
                    <fullName>Rangareddy</fullName>
                </value>
                <value>
                    <fullName>Chevella</fullName>
                </value>
                <value>
                    <fullName>Ghatkesar</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Golconda</fullName>
                </value>
                <value>
                    <fullName>Bahadurpura</fullName>
                </value>
                <value>
                    <fullName>Mahabubnagar</fullName>
                </value>
                <value>
                    <fullName>Achampet</fullName>
                </value>
                <value>
                    <fullName>Gadwal</fullName>
                </value>
                <value>
                    <fullName>Warangal</fullName>
                </value>
                <value>
                    <fullName>Hanmakonda</fullName>
                </value>
                <value>
                    <fullName>Govindaropet</fullName>
                </value>
                <value>
                    <fullName>Khammam</fullName>
                </value>
                <value>
                    <fullName>Singareni</fullName>
                </value>
                <value>
                    <fullName>Bhadrachalam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_For_Change__c</fullName>
        <label>Request For Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Survey No</fullName>
                </value>
                <value>
                    <fullName>Passbook Number</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <label>Village</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mandal__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Shabdipur</fullName>
                </value>
                <value>
                    <fullName>Raghavapur</fullName>
                </value>
                <value>
                    <fullName>Saloora</fullName>
                </value>
                <value>
                    <fullName>Rudrur</fullName>
                </value>
                <value>
                    <fullName>Gutpa</fullName>
                </value>
                <value>
                    <fullName>Makloor</fullName>
                </value>
                <value>
                    <fullName>Ankapur</fullName>
                </value>
                <value>
                    <fullName>Perkit</fullName>
                </value>
                <value>
                    <fullName>Boorgul</fullName>
                </value>
                <value>
                    <fullName>Mallur</fullName>
                </value>
                <value>
                    <fullName>Chegurti</fullName>
                </value>
                <value>
                    <fullName>Lakshmipur</fullName>
                </value>
                <value>
                    <fullName>Chelgal</fullName>
                </value>
                <value>
                    <fullName>Kalleda</fullName>
                </value>
                <value>
                    <fullName>Anathasagar</fullName>
                </value>
                <value>
                    <fullName>Suklapet</fullName>
                </value>
                <value>
                    <fullName>Arutla</fullName>
                </value>
                <value>
                    <fullName>Byathole</fullName>
                </value>
                <value>
                    <fullName>Kyasaram</fullName>
                </value>
                <value>
                    <fullName>Pashamylaram</fullName>
                </value>
                <value>
                    <fullName>Nacharpalle</fullName>
                </value>
                <value>
                    <fullName>Venkatapur</fullName>
                </value>
                <value>
                    <fullName>Belluri</fullName>
                </value>
                <value>
                    <fullName>Waghapur</fullName>
                </value>
                <value>
                    <fullName>Thimmapur</fullName>
                </value>
                <value>
                    <fullName>Watoli</fullName>
                </value>
                <value>
                    <fullName>Nagaram</fullName>
                </value>
                <value>
                    <fullName>Pochammapad</fullName>
                </value>
                <value>
                    <fullName>Ibrahimpally</fullName>
                </value>
                <value>
                    <fullName>Edulabad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Complaint</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Addhar_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>or(not isnumber( Adhaar_Number__c ),len( Adhaar_Number__c )&lt;12,len( Adhaar_Number__c )&gt;12)</errorConditionFormula>
        <errorDisplayField>Adhaar_Number__c</errorDisplayField>
        <errorMessage>Enter the adhaar interms of 12 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>or(not isnumber( Contact_No__c ),len( Contact_No__c )&gt;10,len( Contact_No__c )&lt;10)</errorConditionFormula>
        <errorDisplayField>Contact_No__c</errorDisplayField>
        <errorMessage>Enter the contact number in ten digits format only</errorMessage>
    </validationRules>
</CustomObject>